--- a/public/index.css
+++ b/public/index.css
@@ -12,6 +12,75 @@ header {
   min-width: 100vw;
 }
 
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 2px 0;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  top: 7px;
+  /* flex-direction: column; */
+  /* width: 100%; */
+  text-align: center;
+  position: absolute;
+}
+
+.nav-links li {
+  margin-right: 20px;
+}
+
+@media (max-width: 766px) {
+  .menu-icon {
+    display: flex;
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
+    cursor: pointer;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%); /* Center horizontally */
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    background-color: white;
+    top: 60px;
+    z-index: 1;
+  }
+  .nav-links.show {
+    display: flex;
+  }
+  .bar {
+    margin: 2px 0;
+  }
+}
+
+@media (max-width: 375px) {
+  .menu-icon {
+    top: 20px;
+  }
+  .bar {
+    margin: 1px 0;
+  }
+}
+
 nav {
   /* position:relative; */
 
