--- a/public/index.css
+++ b/public/index.css
@@ -722,10 +722,6 @@ img {
 
 .navHdr {
   padding: 2% 2%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 40px;
-  justify-content: space-around;
 }
 
 .imgWeb{
@@ -799,6 +795,13 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .navhdr{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    justify-content: space-around;
+  }
 
   .imx {
     padding-left: 0%;
