--- a/public/index.css
+++ b/public/index.css
@@ -170,7 +170,7 @@ nav a:hover {
   transform: scale(1);
 } */
 .courseImage {
-  /* max-height: 200px; */
+  max-height: 200px;
   height: 100%;
   width: 100%;
   max-width: 400px;
