--- a/public/index.css
+++ b/public/index.css
@@ -45,7 +45,7 @@ header {
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
-  top: 7px;
+  top: 0px;
   /* flex-direction: column; */
   /* width: 100%; */
   text-align: center;
@@ -213,7 +213,7 @@ nav a:hover {
 } */
 .courseImage {
   /* max-height: 200px; */
-  height: 100%;
+  max-height: 100%;
   width: 100%;
   max-width: 400px;
   border-radius: 4px 4px 0px 0px;
@@ -977,6 +977,10 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .mobPad{
+    margin: 10px 0px !important;
+  }
 
   .webHdr{
     display: none;
