--- a/public/index.css
+++ b/public/index.css
@@ -868,6 +868,7 @@ img {
 
 .btNavMobFl {
   margin-left: 5%;
+  margin-bottom: 2%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 30px 1fr;
